#add all blocks and styles

--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -1,1 +1,4 @@
-footer.footer FOOTER
+footer.footer
+  .footer__hash #Haierография
+  img(src="./icons/Logo-Haier.svg", alt="haier logo").footer__logo
+  .footer__copyrights © 2021 Haier Inc.
