--- a/src/layout/footer/footer.sass
+++ b/src/layout/footer/footer.sass
@@ -1,4 +1,19 @@
 .footer
-  flex-grow: 0
-  flex-shrink: 0
-  flex-basis: auto
+  position: absolute
+  bottom: 0
+  left: 50%
+  max-width: 1200px
+  width: 100%
+  padding: 48px 120px
+  display: flex
+  justify-content: space-between
+  align-items: center
+  border-top-right-radius: 60px
+  border-top-left-radius: 60px
+  background: #1B034B
+  transform: translateX(-50%)
+
+.footer__copyrights, .footer__hash
+  font-size: 16px
+  line-height: 1.25
+  color: #fff
