--- a/src/pages/home/about/about.pug
+++ b/src/pages/home/about/about.pug
@@ -1,2 +1,52 @@
 .home__about
+  .home__about-subtitle Сними самый креативный ролик
+  h2.home__about-title Забери одну из трёх стиральных машин Haier
 
+  .home__about-steps
+    .home__about-step
+      h3.home__about-number 1
+      .home__about-text Для участия нужно зайти в TikTok
+
+    .home__about-arrow.home__about-arrow--1
+      span
+      span
+
+    .home__about-step
+      h3.home__about-number 2
+      .home__about-text Запустить Haieroграфию:
+        div
+          a(href="") маску
+          | ,&nbsp;
+          a(href="") трек
+        div
+          | и свой креатив
+
+    .home__about-arrow.home__about-arrow--2
+      span
+      span
+
+    .home__about-step
+      h3.home__about-number 3
+      .home__about-text Снять оригинальный ролик
+
+    .home__about-arrow.home__about-arrow--3
+      span
+      span
+
+    .home__about-step
+      h3.home__about-number 4
+      .home__about-text Выложить его c #Haierография до 19 августа 2021
+
+    .home__about-arrow.home__about-arrow--4
+      span
+      span
+
+    .home__about-step
+      h3.home__about-number 5
+      .home__about-text Мы выберем лучших Haieroграфов 20 августа 2021
+
+  .home__about-description
+    p Имена лучших опубликуем здесь и в официальном аккаунте Haier в TikTok @haierrussia.
+    p Ищи примеры для вдохновения по #Haierография. Всем танцы!
+
+  a(href="").home__about-rules Правила участия
