--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -22,4 +22,5 @@ block content
         .home__content-period с 19 июля по 19 августа 2021
 
     include ./about/about
+    include ./prizes/prizes
 
