--- a/src/common/_variables.scss
+++ b/src/common/_variables.scss
@@ -1,7 +1,9 @@
 // VARIABLE
 
 // FONT FAMILY
-$font-family-base: 'OpenSans', sans-serif;
+
+$font-family-base: 'Futura', sans-serif;
+$font-family-secondary: 'Roboto', sans-serif;
 
 $font-weight-thin: 100;           // Thin (Hairline)
 $font-weight-extra-light: 200;    // Extra Light (Ultra Light)
