--- a/src/fonts/fonts.sass
+++ b/src/fonts/fonts.sass
@@ -9,3 +9,5 @@
 //$font-weight-black: 900          // Black (Heavy)
 
 +font-face('OpenSans', './open-sans/OpenSans-Regular', $weight: null, $style: null, $exts: eot woff2 woff ttf svg)
++font-face('Futura', './futura/FuturaPT-Medium', $weight: null, $style: null, $exts: eot woff2 woff ttf)
++font-face('Roboto', './roboto/Roboto-Regular', $weight: null, $style: null, $exts: eot woff2 woff)
