--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,5 +1,5 @@
 header.header
   a.header__logo(href='haieronline.ru')
-    img(src="images/logo.svg", alt="logo").header__logo-img
-    .header__logo-delimter
+    .header__logo-img
+      img(src="images/logo.svg", alt="logo")
     span.header__logo-text haieronline.ru
