--- a/src/pages/home/about/about.pug
+++ b/src/pages/home/about/about.pug
@@ -14,12 +14,11 @@
     .home__about-step
       h3.home__about-number 2
       .home__about-text Запустить Haieroграфию:
-        div
+        span
           a(href="") маску
           | ,&nbsp;
           a(href="") трек
-        div
-          | и свой креатив
+          | &nbsp; и свой креатив
 
     .home__about-arrow.home__about-arrow--2
       span
