--- a/src/pages/home/prizes/prizes.pug
+++ b/src/pages/home/prizes/prizes.pug
@@ -16,4 +16,4 @@
       .home__prizes-item
         img(src="./icons/scales.svg", alt="scales img")
         span Функция автовзвешивания и экономии ресурсов
-    img(src="./prizes-n.png", alt="").home__prizes-img
+    img(src="./images/prizes-n.png", alt="").home__prizes-img
