--- a/src/layout/footer/footer.sass
+++ b/src/layout/footer/footer.sass
@@ -17,3 +17,17 @@
   font-size: 16px
   line-height: 1.25
   color: #fff
+
+@media (max-width: 768px)
+  .footer
+    flex-direction: column
+    padding: 48px 0 40px
+
+  .footer__logo
+    margin-bottom: 32px
+
+  .footer__copyrights, .footer__hash
+    font-size: 18px
+
+  .footer__hash
+    margin-bottom: 24px
