--- a/src/layout/header/header.sass
+++ b/src/layout/header/header.sass
@@ -2,11 +2,17 @@
   width: 100%
   padding-left: 83px
 
+  @media (max-width: 768px)
+    padding-left: 0
+
 
 .header__logo
   display: flex
   align-items: center
   text-decoration: none
+
+  @media (max-width: 768px)
+    justify-content: center
 
 
 .header__logo-text
@@ -15,10 +21,22 @@
   color: #fff
   font-weight: 500
 
-.header__logo-delimter
-  width: 2px
-  height: 48px
-  margin: 0 25px 0 24px
-  background: #fff
+  @media (max-width: 768px)
+    font-size: 20px
+
+.header__logo-img
+  display: flex
+
+  &::after
+    flex-shrink: 0
+    content: ''
+    display: block
+    width: 3px
+    height: 48px
+    margin: 0 25px 0 24px
+    background: #fff
 
 
+  @media (max-width: 768px)
+    &::after
+      margin: 0 17px
