--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -4,13 +4,11 @@ block content
   .home
     include ../../layout/header/header
     .home__content
-      .home__content-images
-        img(src="./WM.png", alt="washing mashine").home__content-image.home__content-image--wm
-        img(src="./Phone.png", alt="phone").home__content-image.home__content-image--phone
+      img(src="./images/phone-wm.png", alt="washing mashine").home__content-image
 
       .home__content-text
         .home__content-subtitle Танцевальный челлендж
-        img(src="./Union.svg").home__content-title
+        img(src="./images/Union.svg").home__content-title
 
         .home__content-description Покажи миру свою Haieroграфию и выиграй одну из трёх стиральных машин Haier!
 
