--- a/src/pages/home/prizes/index.sass
+++ b/src/pages/home/prizes/index.sass
@@ -1,8 +1,12 @@
 .home__prizes
   padding: 96px 0 172px
-  background: url('../Background_02.png') no-repeat
-  background-size: cover
-  background-position: top center
+  background: url('../images/bubbles-br.png') no-repeat, url('../images/bubbles-bl.png') no-repeat, url('../images/bottom-bg.png') no-repeat
+  background-size: contain, contain, cover
+  background-position: bottom right, bottom left, bottom center
+
+  @media (max-width: 920px)
+    padding: 36px 0  220px
+
 
 .home__prizes-subtitle
   margin-bottom: 14px
@@ -10,6 +14,12 @@
   line-height: 1.25
   color: #fff
   text-align: center
+
+  @media (max-width: 920px)
+    margin-bottom: 8px
+
+  @media (max-width: 768px)
+    font-size: 20px
 
 .home__prizes-title
   margin: 0 auto 77px
@@ -19,12 +29,20 @@
   color: #fff
   text-align: center
 
+  @media (max-width: 920px)
+    max-width: unset
+    margin: 0 0 32px
+
+  @media (max-width: 768px)
+    font-size: 32px
+
 .home__prizes-content
   position: relative
   display: flex
   max-width: 1022px
   width: 100%
   margin: 0 auto
+
   &::before
     position: absolute
     top: -10%
@@ -38,10 +56,24 @@
     border-radius: 50%
     filter: blur(70px)
 
+  @media( max-width: 920px)
+    flex-direction: column
+    max-width: unset
+    align-items: center
+
+    &::before
+      top: 50%
+      left: 27%
+
 .home__prizes-description
   padding: 37px 0 0 32px
   margin-right: 20px
-  flex-shrink: 0
+
+  @media (max-width: 920px)
+    margin: 0 0 30px 0
+
+  @media (max-width: 768px)
+    padding: 10 0 0 5px
 
 .home__prizes-img
   position: relative
@@ -50,6 +82,7 @@
   display: flex
   align-items: center
   justify-content: start
+
   img
     height: 56px
     width: 56px
@@ -62,6 +95,9 @@
     font-size: 20px
     line-height: 1.25
     color: #fff
+
+    @media (max-width: 768px)
+      font-size: 16px
 
   &:not(:last-child)
     margin-bottom: 24px
