--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -13,9 +13,9 @@ block content
         .home__content-description Покажи миру свою Haieroграфию и выиграй одну из трёх стиральных машин Haier!
 
         .home__content-hashes
-          a.home__content-hash(href="") Челлендж
-          a.home__content-hash(href="") Звук
-          a.home__content-hash(href="") Маска
+          .home__content-hash Челлендж
+          .home__content-hash Звук
+          .home__content-hash Маска
 
         .home__content-period с 19 июля по 19 августа 2021
 
