--- a/src/pages/home/index.sass
+++ b/src/pages/home/index.sass
@@ -4,9 +4,9 @@
   width: 100%
   padding-top: 22px
   margin: 0 auto
-  background: url('./images/Bubble.svg') no-repeat, url('./images/header-bg.png') no-repeat, #370699
-  background-size: contain, auto 63%
-  background-position: top, top
+  background: url('./images/left-big-bubbles.png') no-repeat, url('./images/left-middle-bubbles.png') no-repeat, url('./images/left-sm-bubbles.png') no-repeat, url('./images/right-big-bubbles.png') no-repeat, url('./images/right-middle-bubbles.png') no-repeat, url('./images/right-sm-bubbles.png') no-repeat, url('./images/header-bg.png') no-repeat, #370699
+  background-size: auto, auto, auto, auto, auto, auto, auto
+  background-position: top left, top left, top left, top right, top right, top right, top
 
   @media( max-width: 1024px)
     background-size: contain, cover
