--- a/src/pages/home/prizes/index.sass
+++ b/src/pages/home/prizes/index.sass
@@ -1,8 +1,8 @@
 .home__prizes
   padding: 96px 0 172px
-  background: url('../images/bubbles-br.png') no-repeat, url('../images/bubbles-bl.png') no-repeat, url('../images/bottom-bg.png') no-repeat
-  background-size: contain, contain, cover
-  background-position: bottom right, bottom left, bottom center
+  background: url('../images/left-bottom-mid.png') no-repeat, url('../images/left-bottom-sm.png') no-repeat, url('../images/right-bottom-mid.png') no-repeat, url('../images/right-bottom-sm.png') no-repeat, no-repeat, url('../images/bottom-bg.png') no-repeat, #370699
+  background-size: auto, auto, auto, auto, auto, auto, auto
+  background-position: top left, top left, bottom right, bottom right, top center
 
   @media (max-width: 920px)
     padding: 36px 0  220px
