#add parallax on bubbles

--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -4,6 +4,14 @@ block content
   .home
     include ../../layout/header/header
     .home__content
+      .home__bubbles#scene
+        img(src="./images/left-sm-bubbles.png", alt="", data-depth="0.1").home__bubble.home__bubble--left
+        img(src="./images/left-middle-bubbles.png", alt="", data-depth="0.3").home__bubble.home__bubble--left
+        img(src="./images/left-big-bubbles.png", alt="",data-depth="0.5").home__bubble.home__bubble--left
+        img(src="./images/right-middle-bubbles.png", alt="", data-depth="0.1").home__bubble.home__bubble--right
+        img(src="./images/right-sm-bubbles.png", alt="", data-depth="0.3").home__bubble.home__bubble--right
+        img(src="./images/right-big-bubbles.png", alt="", data-depth="0.5").home__bubble.home__bubble--right
+
       img(src="./images/phone-wm.png", alt="washing mashine").home__content-image
 
       .home__content-text
