--- a/src/pages/home/prizes/index.sass
+++ b/src/pages/home/prizes/index.sass
@@ -1,11 +1,22 @@
 .home__prizes
+  position: relative
   padding: 96px 0 172px
-  background: url('../images/left-bottom-mid.png') no-repeat, url('../images/left-bottom-sm.png') no-repeat, url('../images/right-bottom-mid.png') no-repeat, url('../images/right-bottom-sm.png') no-repeat, no-repeat, url('../images/bottom-bg.png') no-repeat, #370699
-  background-size: auto, auto, auto, auto, auto, auto, auto
-  background-position: top left, top left, bottom right, bottom right, top center
+
 
   @media (max-width: 920px)
     padding: 36px 0  220px
+
+
+.home__prizes-bubbles
+  position: absolute
+  top: 0
+  left: 0
+  right: 0
+  bottom: 0
+
+
+.home__prizes-bubble.home__bubble--right
+  top: 30% !important
 
 
 .home__prizes-subtitle
