--- a/src/pages/home/prizes/prizes.pug
+++ b/src/pages/home/prizes/prizes.pug
@@ -1,4 +1,11 @@
 .home__prizes
+  .home__prizes-bubbles#prizes__scene
+    img(src="./images/b-b-l-sm.png", alt="", data-depth="0.1").home__prizes-bubble.home__bubble.home__bubble--left
+    img(src="./images/b-b-l-mid.png", alt="", data-depth="0.3").home__prizes-bubble.home__bubble.home__bubble--left
+
+    img(src="./images/b-b-r-sm.png", alt="", data-depth="0.1").home__prizes-bubble.home__bubble.home__bubble--right
+    img(src="./images/b-b-r-mid.png", alt="", data-depth="0.3").home__prizes-bubble.home__bubble.home__bubble--right
+
   .home__prizes-subtitle Призы
   h3.home__prizes-title Три крутые стирально-сушильные машины Haier
 
