--- a/src/pages/home/about/index.sass
+++ b/src/pages/home/about/index.sass
@@ -1,4 +1,5 @@
 .home__about
+  position: relative
   max-width: 1320px
   margin-right: 16px
   padding: 100px 0 64px 120px
@@ -86,7 +87,7 @@
   line-height: 1
   color: #fff
 
-  @media( max-width: 560px)
+  @media( max-width: 1024px)
     margin: 0 16px 9px
     font-size: 64px
 
