--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -12,7 +12,7 @@ block content
         img(src="./images/right-sm-bubbles.png", alt="", data-depth="0.3").home__bubble.home__bubble--right
         img(src="./images/right-big-bubbles.png", alt="", data-depth="0.5").home__bubble.home__bubble--right
 
-      img(src="./images/phone-wm.png", alt="washing mashine").home__content-image
+      img(src="./images/wm-phone.png", alt="washing mashine").home__content-image
 
       .home__content-text
         .home__content-subtitle Танцевальный челлендж
