--- a/src/pages/home/prizes/prizes.pug
+++ b/src/pages/home/prizes/prizes.pug
@@ -7,7 +7,9 @@
     img(src="./images/b-b-r-mid.png", alt="", data-depth="0.3").home__prizes-bubble.home__bubble.home__bubble--right
 
   .home__prizes-subtitle Призы
-  h3.home__prizes-title Три крутые стирально-сушильные машины Haier
+  h3.home__prizes-title
+    span Три крутые
+    span стирально-сушильные машины Haier
 
   .home__prizes-content
     .home__prizes-description
