--- a/src/pages/home/index.sass
+++ b/src/pages/home/index.sass
@@ -43,6 +43,13 @@
     right: 0
     left: auto !important
 
+  @media(max-width: 560px)
+    &--left
+      width: 50%
+
+    &--right
+      width: 25%
+
 .home__content-image
   transform: translateY(-10%)
   flex-shrink: 0
