#add links, fix text, replace 3 hashes with one

--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -1,4 +1,5 @@
 footer.footer
   .footer__hash #Haierография
-  img(src="./icons/Logo-Haier.svg", alt="haier logo").footer__logo
+  a(href="https://haieronline.ru/")
+    img(src="./icons/Logo-Haier.svg", alt="haier logo").footer__logo
   .footer__copyrights © 2021 Haier Inc.
