--- a/src/pages/home/about/about.pug
+++ b/src/pages/home/about/about.pug
@@ -1,6 +1,6 @@
 .home__about
   .home__about-subtitle Сними самый креативный ролик
-  h2.home__about-title Забери одну из трёх стиральных машин Haier
+  h2.home__about-title Забери одну из трех стиральных машин Haier
 
   .home__about-steps
     .home__about-step
@@ -15,9 +15,9 @@
       h3.home__about-number 2
       .home__about-text Запустить Haieroграфию:
         span
-          a(href="") маску
+          a(href="https://vm.tiktok.com/ZSJgw6rdG/") маску
           | ,&nbsp;
-          a(href="") трек
+          a(href="https://vm.tiktok.com/ZSJgw6rdG/") трек
           | &nbsp; и свой креатив
 
     .home__about-arrow.home__about-arrow--2
@@ -48,4 +48,4 @@
     p Имена лучших опубликуем здесь и в официальном аккаунте Haier в TikTok @haierrussia.
     p Ищи примеры для вдохновения по #Haierография. Всем танцы!
 
-  a(href="").home__about-rules Правила участия
+  a(href="../../../pdf/Rules.pdf" download).home__about-rules Правила участия
