--- a/src/pages/home/index.sass
+++ b/src/pages/home/index.sass
@@ -111,17 +111,10 @@
     margin-bottom: 20px
     font-size: 20px
 
-.home__content-hashes
-  display: flex
-  margin: 0 -8px 70px
-
-  @media( max-width: 480px)
-    margin: 0 -4px 48px
-
 .home__content-hash
   display: block
   padding: 20px 24px
-  margin: 0 8px
+  margin-bottom: 70px
   font-size: 24px
   line-height: 1
   color: #fff
@@ -131,6 +124,7 @@
 
   @media( max-width: 480px)
     padding: 15px 24px
+    margin-bottom: 48px
     font-size: 18px
 
   @media( max-width: 374px)
