--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -18,12 +18,9 @@ block content
         .home__content-subtitle Танцевальный челлендж
         img(src="./images/Union.svg").home__content-title
 
-        .home__content-description Покажи миру свою Haieroграфию и выиграй одну из трёх стиральных машин Haier!
+        .home__content-description Покажи миру свою Haieroграфию и выиграй одну из трех стиральных машин Haier!
 
-        .home__content-hashes
-          .home__content-hash Челлендж
-          .home__content-hash Звук
-          .home__content-hash Маска
+        a(href="https://vm.tiktok.com/ZSJgw6rdG/").home__content-hash Челлендж и маска
 
         .home__content-period с 19 июля по 19 августа 2021
 
