Add target _blank to links

--- a/src/layout/footer/footer.pug
+++ b/src/layout/footer/footer.pug
@@ -1,5 +1,5 @@
 footer.footer
   .footer__hash #Haierография
-  a(href="https://haieronline.ru/")
+  a(href="https://haieronline.ru/", target="_blank")
     img(src="./icons/Logo-Haier.svg", alt="haier logo").footer__logo
   .footer__copyrights © 2021 Haier Inc.
