--- a/src/layout/header/header.pug
+++ b/src/layout/header/header.pug
@@ -1,5 +1,5 @@
 header.header
-  a.header__logo(href='https://haieronline.ru/')
+  a.header__logo(href='https://haieronline.ru/', target="_blank")
     .header__logo-img
       img(src="images/logo.svg", alt="logo")
     span.header__logo-text haieronline.ru
