--- a/src/pages/home/about/about.pug
+++ b/src/pages/home/about/about.pug
@@ -15,9 +15,9 @@
       h3.home__about-number 2
       .home__about-text Запустить Haieroграфию:
         span
-          a(href="https://vm.tiktok.com/ZSJgw6rdG/") маску
+          a(href="https://vm.tiktok.com/ZSJgw6rdG/", target="_blank") маску
           | ,&nbsp;
-          a(href="https://vm.tiktok.com/ZSJgw6rdG/") трек
+          a(href="https://vm.tiktok.com/ZSJgw6rdG/", target="_blank") трек
           | &nbsp; и свой креатив
 
     .home__about-arrow.home__about-arrow--2
@@ -48,4 +48,4 @@
     p Имена лучших опубликуем здесь и в официальном аккаунте Haier в TikTok @haierrussia.
     p Ищи примеры для вдохновения по #Haierография. Всем танцы!
 
-  a(href="../../../pdf/Rules.pdf" download).home__about-rules Правила участия
+  a(href="../../../public/Rules.pdf" download).home__about-rules Правила участия
