--- a/src/pages/home/index.pug
+++ b/src/pages/home/index.pug
@@ -20,7 +20,7 @@ block content
 
         .home__content-description Покажи миру свою Haieroграфию и выиграй одну из трех стиральных машин Haier!
 
-        a(href="https://vm.tiktok.com/ZSJgw6rdG/").home__content-hash Челлендж и маска
+        a(href="https://vm.tiktok.com/ZSJgw6rdG/", target="_blank").home__content-hash Челлендж и маска
 
         .home__content-period с 19 июля по 19 августа 2021
 
