--- a/src/pages/home/about/about.pug
+++ b/src/pages/home/about/about.pug
@@ -1,6 +1,9 @@
 .home__about
   .home__about-subtitle Сними самый креативный ролик
-  h2.home__about-title Забери одну из трех стиральных машин Haier
+  h2.home__about-title
+    span Забери одну из трех
+    span стиральных машин
+    span Haier
 
   .home__about-steps
     .home__about-step
@@ -13,12 +16,12 @@
 
     .home__about-step
       h3.home__about-number 2
-      .home__about-text Запустить Haieroграфию:
+      .home__about-text Запустить Haieroграфию:&nbsp;
         span
           a(href="https://vm.tiktok.com/ZSJgw6rdG/", target="_blank") маску
-          | ,&nbsp;
+          | ,
           a(href="https://vm.tiktok.com/ZSJgw6rdG/", target="_blank") трек
-          | &nbsp; и свой креатив
+          | и свой креатив
 
     .home__about-arrow.home__about-arrow--2
       span
@@ -48,4 +51,4 @@
     p Имена лучших опубликуем здесь и в официальном аккаунте Haier в TikTok @haierrussia.
     p Ищи примеры для вдохновения по #Haierография. Всем танцы!
 
-  a(href="../../../public/Rules.pdf" download).home__about-rules Правила участия
+  a(href="../../../public/Rules.pdf", target="_blank").home__about-rules Правила участия
