--- a/src/pages/home/about/index.sass
+++ b/src/pages/home/about/index.sass
@@ -2,10 +2,14 @@
   position: relative
   max-width: 1320px
   margin-right: 16px
+  margin-top: -133px
   padding: 100px 0 64px 120px
   background: #1B034B
   border-top-right-radius: 60px
   border-bottom-right-radius: 60px
+
+  @media( max-width: 1180px)
+    margin-top: 20px
 
   @media(max-width: 1320px)
     padding: 90px 8px 62px 50px
@@ -28,12 +32,24 @@
   font-size: 48px
   line-height: 1
   color: #fff
+  @media( max-width: 920px)
+    font-size: 40px
+
   @media( max-width: 768px)
     margin-bottom: 50px
+
 
   @media( max-width: 560px)
     margin-bottom: 32px
     font-size: 32px
+
+  span
+    &:not(:last-child)
+      margin-right: 7px
+
+    @media( max-width: 768px)
+      display: block
+      margin: 0
 
 .home__about-text
   max-width: 140px
@@ -46,6 +62,8 @@
     color: #EC6AFF
     font-family: inherit
     transition: text-decoration .3s
+    &:last-child
+      margin: 0 5px
 
     &:hover
       text-decoration: none
@@ -57,7 +75,6 @@
     max-width: unset
     span
       display: inline-block
-      padding-left: 7px
 
   @media(max-width: 768px)
     font-size: 14px
@@ -149,7 +166,7 @@
 
 .home__about-arrow--highlight
   span
-    box-shadow: 0px 0px 13px 6px #25f4ee, 0px 0px 8px 0px #67ffff, 0px 0px 20px 4px #67ffff, 0px 0px 20px 0px #67ffff, inset 0px 0px 1px 0px #67ffff
+    box-shadow: 0px 0px 13px 6px #d722f3, 0px 0px 8px 0px #EC6AFF, 0px 0px 20px 4px #EC6AFF, 0px 0px 20px 0px #EC6AFF, inset 0px 0px 1px 0px #EC6AFF
 
 .home__about-description
   margin-bottom: 32px
